Added navigation bar and class selectors

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,15 @@
 // Navigation Styles here
+hr{
+    border: 1px dashed silver;
+}
+.Navigation{
+    border: 1px solid black;
+
+    .Nav2{
+        border: 1px solid black;
+
+        .NavAnchors{
+            border: 1px solid black;
+        }
+    }
+}
