--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,18 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+hr {
+  border: 1px dashed silver;
+}
+.Navigation {
+  border: 1px solid black;
+}
+.Navigation .Nav2 {
+  border: 1px solid black;
+}
+.Navigation .Nav2 .NavAnchors {
+  border: 1px solid black;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
