--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,14 +2,18 @@
 hr{
     border: 1px dashed silver;
 }
-.Navigation{
+.navigationbar{
     border: 1px solid black;
 
-    .Nav2{
-        border: 1px solid black;
+    .navtwo{
+        display: flex;
+        margin: 0%;
+        justify-content: flex-end;
+        width: 100%;
 
-        .NavAnchors{
-            border: 1px solid black;
+        nav a{
+            margin: 5%;
         }
     }
+    
 }
