--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,17 +2,21 @@
 hr{
     border: 1px dashed silver;
 }
+.headbus{
+    margin: 2% 10% -4% 10%;
+    font-size: 380%;
+}
 .navigationbar{
-    border: 1px solid black;
-
+    display: flex;
     .navtwo{
-        display: flex;
-        margin: 0%;
-        justify-content: flex-end;
+        margin-left: 60%;
+        margin-bottom: 3%;
+        margin-top: 0%;
         width: 100%;
 
         nav a{
-            margin: 5%;
+            margin: 3%;
+            font-size: 180%;
         }
     }
     
