--- a/css/index.css
+++ b/css/index.css
@@ -199,6 +199,12 @@ hr {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .funbusimg {
+  margin-top: -0.5%;
+}
+.home h2 {
+  margin-top: 2%;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
