--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,12 @@
 .home {
 
+  .funbusimg{
+    margin-top: -0.5%;
+  }
+
+  h2{
+    margin-top: 2%;
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
