--- a/less/home-page.less
+++ b/less/home-page.less
@@ -63,9 +63,15 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      
     }
     .btn{
-      .buttons(darkcyan; 3%);
+      .buttons(darkcyan; 10%);
     }
+  
+  }
+
+  @media @mobile {
+    
   }
 }// home
