--- a/less/navigation.less
+++ b/less/navigation.less
@@ -21,7 +21,23 @@ hr{
     }
 }
 @media @mobile {
-    body {
-    background-color: blue;
-}
+    .headbus{
+        margin: 2% 0% 3% 35%;
+        font-size: 380%;
+    }
+    .navigationbar{
+        display: flex;
+        .navtwo{
+            margin-left: 10%;
+            margin-bottom: 0%;
+            margin-top: 0%;
+            width: 100%;
+    
+            nav a{
+                margin: 5%;
+                font-size: 180%;
+                width: 100%;
+            }
+        }
+    }
 }
