--- a/less/home-page.less
+++ b/less/home-page.less
@@ -72,6 +72,34 @@
   }
 
   @media @mobile {
-    
+    .content-section{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+
+      .img-content{
+        width: 90%;
+        margin-left: 10%;
+        margin-right: 0%;
+      }
+      .text-content{
+        width: 70%;
+      }
+    }
+
+.inverse-content{
+  display: flex;
+  flex-direction: column-reverse;
 }
+.content-pick{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  .destination{
+    width: 70%;
+  }
+}
+  }
 }// home
